--- a/app.json
+++ b/app.json
@@ -7,14 +7,24 @@
     "icon": "./assets/images/icon.png",
     "newArchEnabled": true,
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.felipekrein.androidstackpressable"
     },
     "android": {
       "adaptiveIcon": {
         "backgroundColor": "#E6F4FE",
         "foregroundImage": "./assets/images/android-icon-foreground.png"
-      }
+      },
+      "package": "com.felipekrein.androidstackpressable"
     },
-    "plugins": ["expo-router"]
+    "plugins": [
+      "expo-router"
+    ],
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "e4886b90-1c86-46ae-a243-2a13ce583324"
+      }
+    }
   }
 }
